UI: render recent trades as table (newest first)

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -27,7 +27,23 @@
 
         <div class="section">
             <h2>Recent Trades</h2>
-            <div id="recent-trades">Loading recent trades...</div>
+            <table id="recent-trades-table">
+                <thead>
+                    <tr>
+                        <th>Entry Time</th>
+                        <th>Exit Time</th>
+                        <th>Side</th>
+                        <th>Entry (¢)</th>
+                        <th>Exit (¢)</th>
+                        <th>PnL ($)</th>
+                        <th>Status</th>
+                        <th>Reason</th>
+                    </tr>
+                </thead>
+                <tbody id="recent-trades-body">
+                    <tr><td colspan="8">Loading recent trades...</td></tr>
+                </tbody>
+            </table>
         </div>
     </div>
     <script src="script.js"></script>
