UI: status as 2-column key/value table

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -12,7 +12,7 @@
         
         <div class="section">
             <h2>Status</h2>
-            <p id="status-message">Loading...</p>
+            <div id="status-message">Loading...</div>
         </div>
 
         <div class="section">
