--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -26,6 +26,11 @@
         </div>
 
         <div class="section">
+            <h2>Analytics</h2>
+            <div id="analytics">Loading analytics...</div>
+        </div>
+
+        <div class="section">
             <h2>Recent Trades</h2>
             <table id="recent-trades-table">
                 <thead>
