UI: improve analytics layout; reset ledger

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -27,7 +27,27 @@
 
         <div class="section">
             <h2>Analytics</h2>
-            <div id="analytics">Loading analytics...</div>
+            <div id="analytics">
+                <div id="analytics-overview">Loading analytics...</div>
+                <div class="analytics-grid">
+                    <div>
+                        <h3>By Exit Reason</h3>
+                        <table class="mini-table"><thead><tr><th>Key</th><th>N</th><th>PnL ($)</th></tr></thead><tbody id="analytics-by-exit"><tr><td colspan="3">Loading...</td></tr></tbody></table>
+                    </div>
+                    <div>
+                        <h3>By Entry Phase</h3>
+                        <table class="mini-table"><thead><tr><th>Key</th><th>N</th><th>PnL ($)</th></tr></thead><tbody id="analytics-by-phase"><tr><td colspan="3">Loading...</td></tr></tbody></table>
+                    </div>
+                    <div>
+                        <h3>By Entry Price Bucket</h3>
+                        <table class="mini-table"><thead><tr><th>Key</th><th>N</th><th>PnL ($)</th></tr></thead><tbody id="analytics-by-price"><tr><td colspan="3">Loading...</td></tr></tbody></table>
+                    </div>
+                    <div>
+                        <h3>By Side Inferred</h3>
+                        <table class="mini-table"><thead><tr><th>Key</th><th>N</th><th>PnL ($)</th></tr></thead><tbody id="analytics-by-inferred"><tr><td colspan="3">Loading...</td></tr></tbody></table>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="section">
