Disable flip exits; add richer analytics

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -46,6 +46,22 @@
                         <h3>By Side Inferred</h3>
                         <table class="mini-table"><thead><tr><th>Key</th><th>N</th><th>PnL ($)</th></tr></thead><tbody id="analytics-by-inferred"><tr><td colspan="3">Loading...</td></tr></tbody></table>
                     </div>
+                    <div>
+                        <h3>By Entry Time Left</h3>
+                        <table class="mini-table"><thead><tr><th>Key</th><th>N</th><th>PnL ($)</th></tr></thead><tbody id="analytics-by-timeleft"><tr><td colspan="3">Loading...</td></tr></tbody></table>
+                    </div>
+                    <div>
+                        <h3>By Entry Prob</h3>
+                        <table class="mini-table"><thead><tr><th>Key</th><th>N</th><th>PnL ($)</th></tr></thead><tbody id="analytics-by-prob"><tr><td colspan="3">Loading...</td></tr></tbody></table>
+                    </div>
+                    <div>
+                        <h3>By Side</h3>
+                        <table class="mini-table"><thead><tr><th>Key</th><th>N</th><th>PnL ($)</th></tr></thead><tbody id="analytics-by-side"><tr><td colspan="3">Loading...</td></tr></tbody></table>
+                    </div>
+                    <div>
+                        <h3>By Rec Action</h3>
+                        <table class="mini-table"><thead><tr><th>Key</th><th>N</th><th>PnL ($)</th></tr></thead><tbody id="analytics-by-rec"><tr><td colspan="3">Loading...</td></tr></tbody></table>
+                    </div>
                 </div>
             </div>
         </div>
