Tuning: add market volume filter + analytics

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -59,6 +59,10 @@
                         <table class="mini-table"><thead><tr><th>Key</th><th>N</th><th>PnL ($)</th></tr></thead><tbody id="analytics-by-liq"><tr><td colspan="3">Loading...</td></tr></tbody></table>
                     </div>
                     <div>
+                        <h3>By Market Volume</h3>
+                        <table class="mini-table"><thead><tr><th>Key</th><th>N</th><th>PnL ($)</th></tr></thead><tbody id="analytics-by-mktvol"><tr><td colspan="3">Loading...</td></tr></tbody></table>
+                    </div>
+                    <div>
                         <h3>By Spread</h3>
                         <table class="mini-table"><thead><tr><th>Key</th><th>N</th><th>PnL ($)</th></tr></thead><tbody id="analytics-by-spread"><tr><td colspan="3">Loading...</td></tr></tbody></table>
                     </div>
